; ModuleID = '/home/carl/AnghaBench/tmux/extr_screen.c_screen_push_title.c'
source_filename = "/home/carl/AnghaBench/tmux/extr_screen.c_screen_push_title.c"
target datalayout = "e-m:e-p270:32:32-p271:32:32-p272:64:64-i64:64-f80:128-n8:16:32:64-S128"
target triple = "x86_64-unknown-linux-gnu"

%struct.screen = type { i32*, i32 }
%struct.screen_title_entry = type { i32 }

@entry = common dso_local global i32 0, align 4

; Function Attrs: noinline nounwind optnone uwtable
define dso_local void @screen_push_title(%struct.screen* %0) #0 {
  %2 = alloca %struct.screen*, align 8
  %3 = alloca %struct.screen_title_entry*, align 8
  store %struct.screen* %0, %struct.screen** %2, align 8
  %4 = load %struct.screen*, %struct.screen** %2, align 8
  %5 = getelementptr inbounds %struct.screen, %struct.screen* %4, i32 0, i32 0
  %6 = load i32*, i32** %5, align 8
  %7 = icmp eq i32* %6, null
  br i1 %7, label %8, label %17

8:                                                ; preds = %1
  %9 = call i8* @xmalloc(i32 4)
  %10 = bitcast i8* %9 to i32*
  %11 = load %struct.screen*, %struct.screen** %2, align 8
  %12 = getelementptr inbounds %struct.screen, %struct.screen* %11, i32 0, i32 0
  store i32* %10, i32** %12, align 8
  %13 = load %struct.screen*, %struct.screen** %2, align 8
  %14 = getelementptr inbounds %struct.screen, %struct.screen* %13, i32 0, i32 0
  %15 = load i32*, i32** %14, align 8
  %16 = call i32 @TAILQ_INIT(i32* %15)
  br label %17

17:                                               ; preds = %8, %1
  %18 = call i8* @xmalloc(i32 4)
  %19 = bitcast i8* %18 to %struct.screen_title_entry*
  store %struct.screen_title_entry* %19, %struct.screen_title_entry** %3, align 8
  %20 = load %struct.screen*, %struct.screen** %2, align 8
  %21 = getelementptr inbounds %struct.screen, %struct.screen* %20, i32 0, i32 1
  %22 = load i32, i32* %21, align 8
  %23 = call i32 @xstrdup(i32 %22)
  %24 = load %struct.screen_title_entry*, %struct.screen_title_entry** %3, align 8
  %25 = getelementptr inbounds %struct.screen_title_entry, %struct.screen_title_entry* %24, i32 0, i32 0
  store i32 %23, i32* %25, align 4
  %26 = load %struct.screen*, %struct.screen** %2, align 8
  %27 = getelementptr inbounds %struct.screen, %struct.screen* %26, i32 0, i32 0
  %28 = load i32*, i32** %27, align 8
  %29 = load %struct.screen_title_entry*, %struct.screen_title_entry** %3, align 8
  %30 = load i32, i32* @entry, align 4
  %31 = call i32 @TAILQ_INSERT_HEAD(i32* %28, %struct.screen_title_entry* %29, i32 %30)
  ret void
}

declare dso_local i8* @xmalloc(i32) #1

declare dso_local i32 @TAILQ_INIT(i32*) #1

declare dso_local i32 @xstrdup(i32) #1

declare dso_local i32 @TAILQ_INSERT_HEAD(i32*, %struct.screen_title_entry*, i32) #1


!llvm.module.flags = !{!0}
!llvm.ident = !{!1}

!0 = !{i32 1, !"wchar_size", i32 4}
!1 = !{!"clang version 10.0.1 (https://github.com/wsmoses/llvm-project-tok c8e5003577614e72d6d18a216e6a09771e1fcce4)"}
